--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en" class="light"> 
 
 <head>
-  
+  <style src="/frontend/css/styles.css"></style>
 </head>
 
 <body>
   <div>
-    <nav>
+    <nav class="navbar">
       <ul>
-        <li href=""></li>
+        <li><a href="#">Home</a></li>
       </ul>
     </nav>
   </div>
