Landing Page Launch

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,22 +2,64 @@
 <html lang="en" class="light"> 
 
 <head>
-  <style src="/frontend/css/styles.css"></style>
+  <link rel="stylesheet" href="/frontend/css/styles.css">
 </head>
 
 <body>
-  <div>
-    <nav class="navbar">
+  <nav class="navbar">
+    <header class="nav-header">
+      <div class="nav-image">
+        <img src="/frontend/images/PLACEHOLDER.svg" alt="PLACEHOLDER">
+      </div>
+      <div class="nav-title">
+        <h1>DWAGroupProject</h1>
+      </div>
+    </header>
+    <div class="nav-links">
       <ul>
         <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-    </nav>
+    </div>
+    <div class="usr-panel">
+      <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag">
+      <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon">
+    </div>
+  </nav>
+
+  <div>
+    <main>
+      <p>This is a test</p>
+    </main>
   </div>
+
+  <footer>
+    <div class="f-format">
+      <div class="f-nav">
+        <h4>Navigation</h4>
+        <div class="f-nav-links">
+          <ul>
+            <li><a href="/frontend/index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <hr>
+      </div>
+      <div class="authors">
+        <h4>Authors:</h4>
+        <ul>
+          <li><a href="">Tai Rose (SID: 2108618)</a></li>
+          <li><a href="">Malcom Going</a></li>
+          <li><a href="">Alessandro La Mendola (SID: 2158059)</a></li>
+        </ul>
+  </footer>
+  
 </body>
 
-<footer>
-
-</footer>
 
 
 
