--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,31 +31,75 @@
 
   <div>
     <main>
+      <div class="lp-banner">
+        <h1>Welcome to {placeholder}.com!</h1>
+        <!-- <img src="/frontend/images/lp-banner1.jpg" alt="landing-page-banner"> -->
+      </div>
       <p>This is a test</p>
     </main>
   </div>
 
   <footer>
     <div class="f-format">
-      <div class="f-nav">
-        <h4>Navigation</h4>
-        <div class="f-nav-links">
-          <ul>
-            <li><a href="/frontend/index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+      <div class="f-list">
+        <div class="f-nav">
+          <h4>Navigation</h4>
+          <div>
+            <ul>
+              <li><a href="/frontend/index.html">Home</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
         </div>
-        <hr>
+        <div class="f-mem">
+          <h4>Memberships</h4>
+          <div>
+            <ul>
+              <li><a href="/frontend/index.html">Standard</a></li>
+              <li><a href="#">Premium</a></li>
+              <li><a href="#">Family</a></li>
+              <li><a href="#">Family+</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="f-acc">
+          <h4>Account</h4>
+          <div>
+            <ul>
+              <li><a href="/frontend/index.html">Login / Sign-up</a></li>
+              <li><a href="#">Account Dashboard</a></li>
+              <li><a href="#">My Membership</a></li>
+              <li><a href="#">Billing</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="f-support">
+          <h4>Support</h4>
+          <div>
+            <ul>
+              <li><a href="/frontend/index.html">Contact Us</a></li>
+              <li><a href="#">Report</a></li>
+              
+            </ul>
+          </div>
+        </div>
+        <div class="f-logo">
+          <img src="/frontend/images/PLACEHOLDER.svg">
+        </div>
       </div>
+      <hr>
       <div class="authors">
         <h4>Authors:</h4>
         <ul>
-          <li><a href="">Tai Rose (SID: 2108618)</a></li>
-          <li><a href="">Malcom Going</a></li>
-          <li><a href="">Alessandro La Mendola (SID: 2158059)</a></li>
+          <li><a href="https://github.com/TLyncks">Tai Rose (SID: 2108618)</a></li>
+          <li><a href="https://github.com/mgoing">Malcom Going (SID: 2372291)</a></li>
+          <li><a href="https://github.com/AlessandroLaMendola">Alessandro La Mendola (SID: 2158059)</a></li>
+          <li><a href="https://github.com/yusufkose-aru">Yusuf (SID: TBA)</a></li>
         </ul>
+      </div>
+    </div>
   </footer>
   
 </body>
