Index page refresh

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,62 +4,50 @@
 <head>
   <link rel="stylesheet" href="/frontend/css/styles.css">
 </head>
+
 <body>
-  <div class="main-wrapper">
-    <nav class="navbar">
-      <header class="nav-header">
-        <div class="nav-image">
-          <img src="/frontend/images/PLACEHOLDER.svg" alt="PLACEHOLDER">
-        </div>
-        <div class="nav-title">
-          <h1>DWAGroupProject</h1>
-        </div>
-      </header>
-      <div class="nav-links">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+  <nav class="navbar">
+    <header class="nav-header">
+      <div class="nav-image">
+        <img src="/frontend/images/PLACEHOLDER.svg" alt="PLACEHOLDER">
       </div>
-      <div class="usr-panel">
-        <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag">
-        <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon">
+      <div class="nav-title">
+        <h1>DWAGroupProject</h1>
       </div>
-    </nav>
-    
-    <div class="content-container"
-      <main>
-        <div class="lp-main-content">
-          <div class="lp-banner">
-            <h1>Welcome to {placeholder}.com!</h1>
-            <!-- <img src="/frontend/images/lp-banner1.jpg" alt="landing-page-banner"> -->
-          </div>
-          <div class="lp-brief">
-            <div class="lp-intro">
-              <h2>Take control of your health</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultrices facilisis dictum. Vestibulum in sagittis nulla, pretium feugiat libero. Cras vulputate ornare turpis vitae posuere. Aenean venenatis quam ante, sodales porta lectus gravida eget. Sed justo purus, fringilla id interdum a, ultrices vulputate mauris. In sit amet felis eu massa tempor dapibus. Nulla tempus, orci id lacinia tempus, lacus orci tempus lectus, eget pharetra eros risus imperdiet justo. Nulla ac malesuada diam.
-
-                Ut malesuada ultrices nisl, non faucibus est fringilla sed. Suspendisse gravida, enim in tincidunt semper, elit magna vulputate justo, in ornare nunc turpis rhoncus magna. Vivamus sem lectus, hendrerit quis convallis in, vulputate id felis. In finibus neque non massa mattis malesuada. Morbi scelerisque bibendum eros, eu posuere arcu congue blandit. In hac habitasse platea dictumst. Vivamus ullamcorper metus et massa mollis dapibus. Aenean gravida, augue ut egestas euismod, lorem dolor ultrices lacus, sit amet convallis metus nulla eget eros. In hac habitasse platea dictumst. Aliquam malesuada ipsum lobortis imperdiet vulputate. Praesent porta risus quis ante lacinia, sit amet aliquam eros tristique. Etiam sit amet viverra turpis. Phasellus ac gravida ante. Pellentesque ullamcorper dignissim erat facilisis porttitor. Suspendisse sit amet enim ut dui mattis vehicula.</p>
-            </div>
-            <div>
-              <img src="" alt="">
-            </div>
-          </div>
-          <div class="lp-members">
-
-          </div> 
-          <div class="join-now">
-            <h2>Become a member</h2>
-            <!-- <hr> -->
-            <a href="#">Join Now!</a>
-
-          </div>
-        </div>
-      </main>
+    </header>
+    <div class="nav-links">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
     </div>
-  </div>
+    <div class="usr-panel">
+      <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag">
+      <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon">
+    </div>
+  </nav>
+  
+  <main>
+    <div class="lp-banner">
+      <img src="/frontend/images/lp-banner1.jpg" loading="lazy">
+      <div class="content">
+        <img src="/frontend/images/PLACEHOLDER.svg" loading="lazy">
+        <h1>This is a test</h1>
+
+      </div>      
+    </div>
+    <div class="main-content">
+      <div>
+        <p>This is a test. This is a test. This is a test. This is a test. This is a test.</p>
+      </div>
+      <div>
+        <p>This is a test 2</p>
+      </div>
+      
+    </div>
+  </main>
   
   <footer>
     <div class="f-format">
@@ -118,15 +106,12 @@
           <li><a href="https://github.com/TLyncks">Tai Rose (SID: 2108618)</a></li>
           <li><a href="https://github.com/mgoing">Malcom Going (SID: 2372291)</a></li>
           <li><a href="https://github.com/AlessandroLaMendola">Alessandro La Mendola (SID: 2158059)</a></li>
-          <li><a href="https://github.com/yusufkose-aru">Yusuf (SID: TBA)</a></li>
+          <li><a href="https://github.com/yusufkose-aru">Yusuf Kose (SID: 2415327)</a></li>
         </ul>
       </div>
     </div>
   </footer>
   
 </body>
-
-
-
 
 </html>
