Showing Alex & Yusuf GitLens

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
       </ul>
     </div>
     <div class="usr-panel">
-      <button href="#">Sign Up</button>
+      <button href="#">Sign Up Now`</button>
       <img src="/frontend/images/EmptyBag.svg" alt="empty-shopping-bag">
       <img src="/frontend/images/GuestIcon.svg" alt="guest-profile-icon">
     </div>
