Several changes: Connecting mySQL database on my local computer, schema file setup, server.js file setup, database.js file setup, index.html file setup, UserDashboard.html file setup. Currently dealing with a css regicnition error with the userdashboard and userdashbenefits. This commit should not be synced with main branch until the css error is resolved.

--- a/Members/UserDashboard.html
+++ b/Members/UserDashboard.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Dashboard</title>
-    <link rel="stylesheet" href="/frontend/css/styles.css" />
-    <link rel="stylesheet" href="/frontend/css/dashboard.css" />
+    <link rel="stylesheet" type = "text/css" href="/frontend/css/styles.css" />
+    <link rel="stylesheet" type= "text/css" href="/frontend/css/dashboard.css" />
 </head>
 <style>
     .collapsible {
@@ -67,9 +67,11 @@
         </header>
         <div class="nav-links">
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Memberships</a></li>
-                <li><a href="#">Contact</a></li>
+              <li><a href="#">Dashboard</a></li>
+              <li><a href="#">Calendar</a></li>
+              <li><a href="#">Chat</a></li>
+              <li><a href="#">Digital Content</a></li>
+              <li><a href="#">Settings</a></li>
             </ul>
         </div>
         <div class="usr-panel">
@@ -118,7 +120,9 @@
 
 <button class="collapsible">Settings</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 
 <script>
