--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
   
   <main>
     <div class="lp-banner">
-      <video src="/frontend/images/cambridge_students_walking.mp4" loading="lazy" autoplay muted loop>
+      <video src="/frontend/images/cambridge_students_walking.mp4" loading="lazy" autoplay muted loop></video>
       <div class="content">
         <img src="/frontend/images/PLACEHOLDER.svg" loading="lazy">
         <h1>This is a test</h1>
